# siphon-app

./: .gitignore  ONBOARDING.md  UPDATES.md  Untitled  next.config.ts  package-lock.json  package.json  zk-revamp.md
docs/building_blocks/: README.md  strategies_l2.md
fhe-wasm/: .gitignore  Cargo.toml  crossimpl-test.mjs  spike-test.mjs
fhe-wasm/pkg/: package.json  siphon_fhe_wasm.d.ts  siphon_fhe_wasm.js  siphon_fhe_wasm_bg.js  siphon_fhe_wasm_bg.wasm  siphon_fhe_wasm_bg.wasm.d.ts
fhe-wasm/src/: lib.rs
neogen/lib/: asiHeadlessClient.ts  learn-progress.ts  useLiveWidget.ts
neogen/types/: ethereum.d.ts
neogen/widgets/: WidgetArea.tsx  WidgetFactory.tsx
public/idl/: matching_engine.json  per_matching.json
public/types/: matching_engine.ts  per_matching.ts
public/zk/: main.wasm  verification_key.json
src/: middleware.ts
src-archive/app/: globals.css
src-archive/components/: Nexus.tsx
src-archive/config/: env.ts
src-archive/crypto/: X25519Store.ts
src-archive/idl-types/: README.md
src-archive/lib/: config.ts  encryption.ts  eventListeners.ts  fhe.ts  solanaWallet.ts  strategy.ts  zkPoolHandler.ts
src-archive/providers/: SolanaProvider.tsx  index.tsx
src-archive/types/: ethereum.d.ts
src-solana/app/: globals.css  hero.module.css  landing.module.css  layout.tsx  page.tsx
src-solana/components/: Nexus.tsx  ProSwapMode.css
src-solana/crypto/: arcium.ts
src-solana/hooks/: useBalance.ts  useOrders.ts
src-solana/lib/: arciumHelpers.ts  constants.ts  encryption.ts  eventListeners.ts  fheKeyStore.ts  (+13 more)
supabase/: prune_spent_commitments.sql
(+461 files in other folders)
